# lupa-na-prawo

./: .gitignore  PLAN.md  SPEC.md  VALIDATION.md  docker-compose.yml  pyproject.toml  run_mcp.sh
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1c4aaae8177f_initial_schema.py  31956bf10ab6_add_senat_processes.py  902b34563f20_add_sejm_prints_and_print_chunks.py
deploy/: setup.sh
deploy/nginx/: lupa-na-prawo.conf
deploy/systemd/: lupa-na-prawo.service
src/polish_law_helper/: cli.py  config.py  installer.py  integrity.py  main.py  mcp_server.py  scheduler.py  server.py  tasks.py
src/polish_law_helper/db/: engine.py  models.py
src/polish_law_helper/embeddings/: ollama_client.py
src/polish_law_helper/ingestion/: chunker.py  eli_client.py  html_parser.py  ingest_acts.py  ingest_prints.py  ingest_sejm.py  ingest_senat.py  linker.py  print_chunker.py  print_parser.py  retry.py  sejm_client.py  senat_client.py
src/polish_law_helper/templates/: act_detail.html  acts_list.html  base.html  index.html  mcp_guide.html  print_detail.html  process_detail.html  prywatnosc.html  regulamin.html  search.html  sejm.html  senat_detail.html  voting_detail.html
src/polish_law_helper/templates/partials/: recent_acts.html  search_results.html  sejm_live.html  sejm_processes.html  sejm_votings.html  senat_processes.html
