[project]
name = "polish-law-helper"
version = "0.1.0"
description = "Semantic search over Polish law codexes + Sejm/Senat legislative tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pgvector>=0.3",
    "alembic",
    "pydantic-settings",
    "httpx",
    "beautifulsoup4",
    "lxml",
    "typer",
    "rich",
    "mcp[cli]",
    "psycopg[binary]",
    "jinja2",
    "apscheduler>=3.10,<4",
    "pymupdf>=1.24",
]

[project.scripts]
plh = "polish_law_helper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polish_law_helper"]
